fixed image overflow by wrapping in a div.

--- a/css/index.css
+++ b/css/index.css
@@ -43,6 +43,9 @@ table.rakhis {
   img.rakhi_pic {
       width: 100%;
       height: 100%;
+      /* opacity: 10%; */
+      display: block;
+      margin: auto;
   }
 
   /* styles for cards */
@@ -50,18 +53,19 @@ table.rakhis {
     display: flex;
     flex-direction: row;
     font-size: 20px;
-    /* flex-wrap: wrap; */
+    flex-wrap: wrap;
     text-align: center;
+    justify-content: space-around;
   }
 
   .card {
-    /* box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s; */
-    width: 40%;
-    /* margin-bottom: 10px;
-    margin-right: 10px; */
-    border-width: 20px;
-    border-color: burlywood;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    width: 70%;
+    margin-bottom: 20px;
+    margin-right: 10px;
+    /* border-width: 20px; */
+    /* border-color: burlywood; */
   }
   
   .card:hover {
@@ -71,3 +75,7 @@ table.rakhis {
   .container {
     padding: 2px 16px;
   }
+
+  /* * {
+    outline: 1px solid #f00 !important;
+  } */
